2008-03-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #4186: GIFBUILDER cropsized images have bad quality (thanks to Steffen Kamper)
	* Fixed bug #7634: Tabs disappear when BE-editing a record that contains IRRE

2008-03-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7871: Extension with static data is not installed because of double form tag (thanks to Steffen)

2008-03-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7877: htmlArea RTE block style feature raises javascript errors in IE6
	* Fixed bug #7878: Extension cannot override a previously defined htmlArea RTE hotkey

2008-03-16  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #7793: Argument 1 passed to t3lib_div::arrayToLogString() in module setting must not be null (thanks to Steffen Kamper)
	* Fixed bug #7861: t3lib_div::mkdir() should suppress PHP warnings/errors (thanks to Francois Suter)
	* Fixed bug #7843: t3lib_div uses array_unshift() instead of array_shift() in getIndpEnv() (thanks to Christian Kuhn)

2008-03-16  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7396: hardcoded fieldset and legend around radio buttons
	* Fixed bug #7817: Transparent PNGs do not work in IE6
	* Fixed bug #7873: Wrong condition for IE6, credits Steffen Kamper
	* Fixed issue #7876: beautify the permissions module a bit
	* Code cleanup: replaced CVS with SVN
	* Updated Copyright notices

2008-03-15  Ingo Renner  <ingo@typo3.org>

	* Added follow up to #7588: Accesscheck for clearCache, credits Steffen Kamper
	* Fixed bug #7777: Hide Filter is not possible, credits Steffen Kamper

2008-03-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7857: htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867: htmlArea RTE undo/redo does not restore caret position
	* Fixed bug #7857 (revisited): htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867 (revisited): htmlArea RTE undo/redo does not restore caret position

2008-03-14  Stanislas Rolland  <typo3@sjbr.ca>
