@@ -348,7 +348,9 @@ InlineElements = HTMLArea.Plugin.extend({
 								range.collapse(false);
 							}
 						}
-						parent.normalize();
+						try { // normalize() is not available in IE5.5
+							parent.normalize();
+						} catch(e) { }
 					}
 				}
 			} else {
