@@ -1,3 +1,7 @@
+2008-03-17  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7886: JS error raised in htmlArea RTE in IE5.5 when setting inline markup or text style
+
 2008-03-16  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7877: htmlArea RTE block style feature raises javascript errors in IE6
