@@ -1,3 +1,7 @@
+2008-03-17  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7886: JS error raised in htmlArea RTE in IE5.5 when setting inline markup or text style
+
 2008-03-17  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug #4186: GIFBUILDER cropsized images have bad quality (thanks to Steffen Kamper)
